--- a/products.html
+++ b/products.html
@@ -23,28 +23,28 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, nesciunt?</p>
         <div id="electric-guitar">
-            <img src="electricguitar.jpg" alt="electric guitar" height="300">
+            <img src="img/electricguitar.jpg" alt="electric guitar" height="300">
             <h3>1. Electric Guitar</h3>
             <p><strong>6000$</strong></p>
             <br><hr><br>
         </div>
 
         <div id="bass-guitar">
-            <img src="bassguitar.jpg" alt="bass guitar" height="300">
+            <img src="img/bassguitar.jpg" alt="bass guitar" height="300">
             <h3>2. Bass Guitar</h3>
             <p><strong>5000$</strong></p>
             <br><hr><br>
         </div>
 
         <div id="drums">
-            <img src="drums.jpg" alt="drums" height="300">
+            <img src="img/drums.jpg" alt="drums" height="300">
             <h3>3. Drums</h3>
             <p><strong>10000$</strong></p>
             <br><hr><br>
         </div>
 
         <div id="piano">
-            <img src="piano.webp" alt="piano" height="300">
+            <img src="img/piano.webp" alt="piano" height="300">
             <h3>4. Piano</h3>
             <p><strong>6000$</strong></p>
         </div>
